# qtlottie

./: .qmake.conf  CMakeLists.txt  REUSE.toml  dependencies.yaml
src/bodymovin/: CMakeLists.txt  beziereasing.cpp  beziereasing_p.h  bmbase.cpp  bmbase_p.h  bmbasictransform.cpp  bmbasictransform_p.h  bmconstants_p.h  bmellipse.cpp  bmellipse_p.h  bmfill.cpp  bmfill_p.h  bmfilleffect.cpp  bmfilleffect_p.h  bmfreeformshape.cpp  bmfreeformshape_p.h  bmgfill.cpp  bmgfill_p.h  bmglobal.h  bmgroup.cpp  bmgroup_p.h  bmimage.cpp  bmimage_p.h  bmimagelayer.cpp  bmimagelayer_p.h  bmlayer.cpp  bmlayer_p.h  bmpathtrimmer.cpp  bmpathtrimmer_p.h  bmpolystar.cpp  bmpolystar_p.h  bmproperty_p.h  bmrect.cpp  bmrect_p.h  bmrepeater.cpp  bmrepeater_p.h  bmrepeatertransform.cpp  bmrepeatertransform_p.h  bmround.cpp  bmround_p.h  (+15 more)
src/imports/: CMakeLists.txt  lottieanimation.cpp  lottieanimation.h
src/imports/doc/: qtlottieanimation.qdocconf
src/imports/rasterrenderer/: batchrenderer.cpp  batchrenderer.h  lottierasterrenderer.cpp  lottierasterrenderer.h
tests/auto/bodymovin/shape/ellipse/: CMakeLists.txt
tests/auto/bodymovin/shape/fill/: CMakeLists.txt
tests/auto/bodymovin/shape/path/: CMakeLists.txt
tests/auto/bodymovin/shape/rect/: CMakeLists.txt
tests/baseline/: CMakeLists.txt
tests/baseline/data/docsamples/: REUSE.toml
tests/baseline/lottie/: tst_baseline_qtlottie.cpp
tests/baseline/scenegrabber/: Main.qml  main.cpp
tests/manual/: CMakeLists.txt
tests/manual/featcheck/: main.cpp
tests/manual/testApp/: CMakeLists.txt
(+7 files in other folders)
